Bug 60280 - PRINTING of TABLE borders, borders around paragraphs and footer, some graphic elements suppressed by OLE objects in document
Summary: PRINTING of TABLE borders, borders around paragraphs and footer, some graphic...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium critical
Assignee: Michael Stahl (allotropia)
URL: https://bugs.freedesktop.org/buglist....
Whiteboard: target:4.1.0 target:4.0.3
Keywords: regression
: 60898 61031 61240 61266 61711 61913 62197 62261 62488 62667 62898 63243 63264 63541 63813 63843 63972 64243 64271 64328 64492 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-02-04 14:06 UTC by Rainer Bielefeld Retired
Modified: 2016-12-19 03:39 UTC (History)
32 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test Kit (480.09 KB, application/zip)
2013-02-04 14:06 UTC, Rainer Bielefeld Retired
Details
MATH object prevents printout of table borders (16.45 KB, application/vnd.oasis.opendocument.text)
2013-04-18 13:05 UTC, Gisbert
Details
LibreOffice и MSOffice открывают по-разному этот файл. (185.44 KB, application/vnd.ms-word.document.12)
2016-12-19 03:39 UTC, Azizbek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2013-02-04 14:06:28 UTC
Created attachment 74172 [details]
Test Kit

Steps how to reproduce with "LibO  4.0.0.3 rc - GERMAN UI / German Locale 
[Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)]"  {tinderbox: @6, pull time 2013-01-31 11:30(?)} on German WIN7 Home Premium (64bit) with User Profile updated from 4.0.0.2:

1. From attached Test Kit open "sample1.odt"
2. Print Pages 2-3
   Expected: looks more or less as on screen
   Actual: many elements missing

Some of the damages will be because I replaced all fonts contents by "i", what also replaced some TABstops and so  on. but obvious missing items (switch on line numering):

45     - Fax machine Icon
60 ff  - Table borders
65 ff  - blue borders around paragraphs 
Footer - LibO logo picture and blue line above
71 ff  - Table borders
73 ff  - borders (lines) in GDI element
80     - Signature

It's nothing with the document, works fine with 3.5.7.2 (others not yet tested)
Fresh new profile does not help.
Same with Samsung Laser Printer, Oki Laser Printer, FreePDF (See attachment)

PDF EXPORT is ok

Still lots of tests have to be done
Comment 1 Rainer Bielefeld Retired 2013-02-04 14:12:16 UTC
No problem with CALC, DRAW in a first quick test
Comment 2 Rainer Bielefeld Retired 2013-02-04 14:19:56 UTC
Also  [Reproducible] with parallel Dev. Installation of "LODev  4.0.1.0+   -  English UI / German Locale  [Build ID:693217465486667d38c3b7cd6d654136fe1efc8)]"  {tinderbox: @6, pull time  2013-02-03 09:04:55} on German WIN7 Home Premium (64bit) with newly created user profile ….\LODev\401\
Comment 3 Rainer Bielefeld Retired 2013-02-04 14:27:56 UTC
Already [Reproducible] with unzipped  installation of  "LOdev  4.0.0.0.alpha1+   -  ENGLISH UI / German Locale  [Build ID: af60316514f3ae3d4c475819bf86f2af837171e)]"  {tinderbox: Win-x86@6, pull time 2012-11-23 22:10:31} on German WIN7 Home Premium (64bit) with own separate User Profile

Was still ok with server-installation of Master "3.7.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: b255de8]" (tinderbox: Win-x86@6-fast, pull time 2012-06-05 23:16:58)
Comment 4 Rainer Bielefeld Retired 2013-03-03 09:08:40 UTC
*** Bug 61711 has been marked as a duplicate of this bug. ***
Comment 5 A (Andy) 2013-03-03 10:08:53 UTC
reproducible with LO 4.0.0.3 (Win7 Home, 64bit)

Remarks:
In addition, a red line in the header is missing as well as the circle in item 70.

@Rainer: I have in LO a green line in the footer instead of a blue line.  Do you have here a blue line?
Comment 6 jürgen roland 2013-03-12 10:23:31 UTC
i had the same and similar problems.

can be seen in my bug report:

https://bugs.freedesktop.org/show_bug.cgi?id=61913
Comment 7 Cor Nouws 2013-03-19 13:39:25 UTC
(In reply to comment #0)

> 45     - Fax machine Icon
> 60 ff  - Table borders
> 65 ff  - blue borders around paragraphs 
> Footer - LibO logo picture and blue line above
> 71 ff  - Table borders
> 73 ff  - borders (lines) in GDI element
> 80     - Signature

In 4.0.2rc1 and 4.0.1rc2 on Linux I see all the elements on paper (and screen)
Did not test another version (hate printing ;-) )
Comment 8 Rainer Bielefeld Retired 2013-03-20 06:33:23 UTC
The table border problem is related to "Bug 61913 - particular OLE objects suppress PRINTING of .wmf". 

When I do the test with "sample1.odt" again after having deleted all OLE Objects (use Navigator!) table looks ok.

It might be that OLE objects also can suppress printing of OLE objects, in Bug 61913 it seemed that a DRAW object even suppressed the printout of itself (and of a logo.wmf in that document).

Problem here started same time as Bug 61913:

Already [Reproducible] with unzipped  installation of  "LOdev  4.0.0.0.alpha1+   -  ENGLISH UI / German Locale  [Build ID: af60316514f3ae3d4c475819bf86f2af837171e)]"  {tinderbox: Win-x86@6, pull time 2012-11-23 22:10:31} on German WIN7 Home Premium (64bit) with own separate User Profile 

Was still ok with Server-installation of Master " 3.7.0.0.alpha0+  – ENGLISH UI [Build ID: f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7 Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3

@Michael:
Please add Witeboard tag “bibisectrequest” if you think that a bibisect result can ease your work.
Please change  Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf (and remove others in team from CC).
Comment 9 Domingo Sacristan 2013-03-29 09:54:35 UTC
reproducible with LO 4.0.2.2 (WinXP)
Comment 10 Rainer Bielefeld Retired 2013-04-16 15:46:03 UTC
*** Bug 62488 has been marked as a duplicate of this bug. ***
Comment 11 Rainer Bielefeld Retired 2013-04-16 16:14:08 UTC
*** Bug 63243 has been marked as a duplicate of this bug. ***
Comment 12 Rainer Bielefeld Retired 2013-04-16 16:23:01 UTC
*** Bug 61031 has been marked as a duplicate of this bug. ***
Comment 13 Rainer Bielefeld Retired 2013-04-16 16:34:38 UTC
*** Bug 60898 has been marked as a duplicate of this bug. ***
Comment 14 Rainer Bielefeld Retired 2013-04-16 16:50:08 UTC
*** Bug 61240 has been marked as a duplicate of this bug. ***
Comment 15 Rainer Bielefeld Retired 2013-04-16 16:52:36 UTC
*** Bug 63541 has been marked as a duplicate of this bug. ***
Comment 16 Rainer Bielefeld Retired 2013-04-16 16:55:17 UTC
It's too expensive to collect the DUPs one by one, please simply check URL above with probably (but not 100% surely) related bugs.
Comment 17 Gisbert 2013-04-18 13:05:54 UTC
Created attachment 78178 [details]
MATH object prevents printout of table borders

LO 4.0.2.2 : single MATH-object anywhere in the document prevents printout of table borders.
pdf-export is not affected.
Comment 18 Hans-Martin Brückmann 2013-04-18 15:03:07 UTC
LibreOffice 4.0.2.2 : also single calc-object(OLE) anywhere in the document prevents printout of table borders.pdf-export is not affected.
Comment 19 Hans-Martin Brückmann 2013-04-19 06:25:51 UTC

To whom do we have to pay to fix this? Any idea? And which amount?

;-)
Comment 20 domingo.sacristan 2013-04-22 06:47:41 UTC
Tested on Windows Xp and Libreoffice 4.0.3.1 with Test Kit, the problem persist
Comment 21 Florian Reisinger 2013-04-23 17:06:54 UTC
*** Bug 63843 has been marked as a duplicate of this bug. ***
Comment 22 Michael Stahl (allotropia) 2013-04-23 20:43:09 UTC
the problem is apparently only visible on Windows, not Linux.

the SwNoTxtFrm::PaintPicture was mis-merged and did not
always restore the anti-aliasing mode that it changed,
which causes the problem for the border lines that are painted
after that.

fixed on master.
Comment 23 Commit Notification 2013-04-23 20:50:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=954d695827431a5badd1a993d8f364c669ca9c9c

fdo#60280: sw: restore anti-aliasing for all OLE objects



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2013-04-24 08:35:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3e8a9649ac653eafaf8c5fa57e20d3dbe90d82c&h=libreoffice-4-0

fdo#60280: sw: restore anti-aliasing for all OLE objects


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 25 Michael Stahl (allotropia) 2013-04-24 19:23:44 UTC
*** Bug 61913 has been marked as a duplicate of this bug. ***
Comment 26 Michael Stahl (allotropia) 2013-04-24 19:30:11 UTC
*** Bug 62261 has been marked as a duplicate of this bug. ***
Comment 27 Michael Stahl (allotropia) 2013-04-24 19:37:39 UTC
*** Bug 62667 has been marked as a duplicate of this bug. ***
Comment 28 Michael Stahl (allotropia) 2013-04-24 20:00:26 UTC
*** Bug 62898 has been marked as a duplicate of this bug. ***
Comment 29 Michael Stahl (allotropia) 2013-04-24 20:30:16 UTC
*** Bug 63264 has been marked as a duplicate of this bug. ***
Comment 30 Commit Notification 2013-04-25 08:25:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63397e1e699845e92e3046fd50bbbdcba6512a32&h=libreoffice-4-0-3

fdo#60280: sw: restore anti-aliasing for all OLE objects


It will be available already in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 31 Michael Meeks 2013-04-25 08:44:08 UTC
Nice work Michael - thanks so much for the fix ! :-)
Comment 32 Panos Stokas 2013-04-27 05:27:24 UTC
*** Bug 63972 has been marked as a duplicate of this bug. ***
Comment 33 Panos Stokas 2013-04-27 05:31:07 UTC
*** Bug 62197 has been marked as a duplicate of this bug. ***
Comment 34 Panos Stokas 2013-04-27 05:32:17 UTC
*** Bug 63813 has been marked as a duplicate of this bug. ***
Comment 35 Dezso Horvath 2013-04-27 11:08:13 UTC
Tested patch on Windows 7 Hungarian. Now prints out table border grids with math objects in cell. Thanks for the fix.
Comment 36 Thomas van der Meulen [retired] 2013-05-09 08:52:06 UTC
*** Bug 64328 has been marked as a duplicate of this bug. ***
Comment 37 Thomas van der Meulen [retired] 2013-05-09 15:41:38 UTC
*** Bug 64243 has been marked as a duplicate of this bug. ***
Comment 38 Winfried Donkers 2013-05-13 06:21:01 UTC
*** Bug 61266 has been marked as a duplicate of this bug. ***
Comment 39 Thomas van der Meulen [retired] 2013-05-13 07:03:02 UTC
*** Bug 64492 has been marked as a duplicate of this bug. ***
Comment 40 Thomas van der Meulen [retired] 2013-05-13 07:03:35 UTC
*** Bug 64271 has been marked as a duplicate of this bug. ***
Comment 41 tommy27 2013-05-13 08:08:35 UTC
confirming that this has been FIXED in LibO 4.0.3.3 final release (tested on WinXP 32bit)
Comment 42 Azizbek 2016-12-19 03:39:25 UTC
Created attachment 129754 [details]
LibreOffice и MSOffice открывают по-разному этот файл.

Прошу исправить в LibreOffice открытие данных типов файлов.