fdo#60280: sw: restore anti-aliasing for all OLE objects

The OLE case in SwNoTxtFrm::PaintPicture() was mis-merged to modify the
anti-aliasing always but reset it only for Charts.

(regression from 44cfc7cb6533d827fd2d6e586d92c61d7d7f7a70)

Change-Id: I0d740e621c3fd71f308d980581edb3c16308c06e
(cherry picked from commit 954d695827431a5badd1a993d8f364c669ca9c9c)
Reviewed-on: https://gerrit.libreoffice.org/3589
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>
(cherry picked from commit f3e8a9649ac653eafaf8c5fa57e20d3dbe90d82c)